# morga

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml
api/: Cargo.toml  Dockerfile  Dockerfile.prod  rustfmt.toml
api/src/: main.rs
api/src/controller/: quest.rs
api/src/model/: quest.rs
api/src/service/: quest.rs
app/: Dockerfile  README.md  package-lock.json  package.json  run.sh
app/public/: index.html
app/src/: app.js  app.test.js  theme.js
app/src/component/list/: list.js
app/src/component/navigation/: navigation.js
